# Hello_World_Android_NDK

./: .gitignore  README.md  local.properties_example  settings.gradle
app/: build.gradle
app/libs/arm64-v8a/: libcharset.la  libcord.la  libffi.la  libguile-2.2.so-gdb.scm  libiconv.la  libltdl.la  libunistring.la
app/libs/arm64-v8a/pkgconfig/: guile-2.2.pc
app/libs/armeabi-v7a/: libcord.la  libguile-2.2.la  libiconv.la
app/libs/armeabi-v7a/guile/2.2/ccache/ice-9/: and-let-star.go  eval-string.go  local-eval.go  optargs.go  ports.go  pretty-print.go  psyntax-pp.go  rdelim.go  suspendable-ports.go  threads.go  time.go  vlist.go
app/libs/armeabi-v7a/guile/2.2/ccache/ice-9/peg/: string-peg.go  using-parsers.go
app/libs/armeabi-v7a/guile/2.2/ccache/language/: cps.go
app/libs/armeabi-v7a/guile/2.2/ccache/language/cps/: closure-conversion.go  cse.go  effects-analysis.go  handle-interrupts.go  intset.go  licm.go  types.go  utils.go  verify.go
app/libs/armeabi-v7a/guile/2.2/ccache/language/ecmascript/: compile-tree-il.go
app/libs/armeabi-v7a/guile/2.2/ccache/language/elisp/: bindings.go  compile-tree-il.go  parser.go
app/libs/armeabi-v7a/guile/2.2/ccache/language/tree-il/: analyze.go  effects.go  fix-letrec.go
app/libs/armeabi-v7a/guile/2.2/ccache/rnrs/: base.go  enums.go  exceptions.go  hashtables.go
app/libs/armeabi-v7a/guile/2.2/ccache/rnrs/io/: ports.go
app/libs/armeabi-v7a/guile/2.2/ccache/rnrs/records/: syntactic.go
app/libs/armeabi-v7a/guile/2.2/ccache/scripts/: compile.go
app/libs/armeabi-v7a/guile/2.2/ccache/srfi/: srfi-1.go  srfi-111.go  srfi-18.go  srfi-26.go  srfi-27.go  srfi-34.go  srfi-35.go  srfi-41.go  srfi-45.go
app/libs/armeabi-v7a/guile/2.2/ccache/srfi/srfi-4/: gnu.go
app/libs/armeabi-v7a/guile/2.2/ccache/sxml/: match.go  ssax.go
app/libs/armeabi-v7a/guile/2.2/ccache/system/: foreign-object.go
app/libs/armeabi-v7a/guile/2.2/ccache/system/base/: ck.go  lalr.go  syntax.go
app/libs/armeabi-v7a/guile/2.2/ccache/system/repl/: coop-server.go
app/libs/armeabi-v7a/guile/2.2/ccache/system/vm/: debug.go  elf.go  frame.go
app/libs/armeabi-v7a/guile/2.2/ccache/texinfo/: plain-text.go  reflection.go
app/libs/armeabi-v7a/guile/2.2/ccache/web/: http.go
app/libs/armeabi-v7a/guile/2.2/ccache/web/server/: http.go
app/libs/armeabi-v7a/pkgconfig/: bdw-gc.pc  guile-2.2.pc
app/src/androidTest/java/it/couchgamessoftware/helloworld/metal/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/local/include/: gmp.h
app/src/main/assets/arm64-v8a/local/lib/: libgc.la  libgmp.la  libguile-2.2.la
app/src/main/assets/armeabi-v7a/local/include/: gmp.h
app/src/main/assets/armeabi-v7a/local/lib/: charset.alias  libcharset.la  libffi.la  libgc.la  libgmp.la  libltdl.la  libunistring.la
app/src/main/cpp/: CMakeLists.txt  bootstrapping_utils.cpp  copy_tree.cpp  copy_tree.h  naive-attempt.cpp  naive-attempt.h  native-lib.cpp
app/src/main/cpp/include/guile/2.2/libguile/: pairs.h
app/src/main/cpp/lua/: CMakeLists.txt
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
misc/: android_build_config.sh  configure_command_sample.sh
(+92 files in other folders)
